# hass-sky-lite-evolve

./: .devcontainer.json  .gitignore  .ruff.toml  LICENSE  Makefile  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  validate.yml
config/: configuration.yaml
custom_components/sky_lite_evolve/: __init__.py  config_flow.py  const.py  coordinator.py  light.py  manifest.json  number.py  switch.py  tuya_api.py
custom_components/sky_lite_evolve/translations/: en.json
scripts/: develop  setup
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_init.py  test_light.py  test_number.py  test_switch.py  test_tuya_api.py
